[FEATURE] Frontend integration

--- a/Resources/Private/Templates/Frontend/ManageProviders/List.html
+++ b/Resources/Private/Templates/Frontend/ManageProviders/List.html
@@ -5,6 +5,7 @@
 <f:section name="Content">
     <f:if condition="{providers}">
         <h2><f:translate key="manage_providers.title" /></h2>
+        <p><small><f:translate key="manage_providers.description" /></small></p>
 
         <ul class="list-group">
             <f:for each="{providers}" as="provider" key="identifier">
