--- a/Resources/Private/Partials/Frontend/ManageProviders/ProviderItem.html
+++ b/Resources/Private/Partials/Frontend/ManageProviders/ProviderItem.html
@@ -1,9 +1,10 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<f:variable name="providerLabel" value ="{f:translate(key: provider.label, default: provider.label)}" />
-<f:variable name="providerIsActive" value ="{f:if(condition: '{activeProviders.{provider.identifier}.uid}', then: 1, else: 0)}" />
+<f:variable name="providerLabel" value="{f:translate(key: provider.label, default: provider.label)}" />
+<f:variable name="providerIsActive" value="{f:if(condition: '{activeProviders.{provider.identifier}.uid}', then: 1, else: 0)}" />
+<f:variable name="ariaPressed" value="{f:if(condition: '{providerIsActive}', then: 'true', else: 'false')}" />
 
-<li class="list-group-item d-flex justify-content-between align-items-center{f:if(condition: '{providerIsActive}', then: ' active')}" id="{identifier}-provider">
+<li class="list-group-item d-flex justify-content-between align-items-center" id="{identifier}-provider">
     <div class="flex-column">
         <div class="p-2">{providerLabel}</div>
         <f:if condition="{provider.description}">
@@ -15,12 +16,12 @@
 
     <f:if condition="{providerIsActive}">
         <f:then>
-            <f:link.action action="deactivate" arguments="{providerId: '{activeProviders.{provider.identifier}.uid}'}" title="{f:translate(key:'manage_providers.deactivateLinkTitle', arguments: {0: providerLabel})}" class="btn btn-secondary active" additionalAttributes="{role: 'button'}" aria="{pressed: 'true'}">
+            <f:link.action action="deactivate" arguments="{providerId: '{activeProviders.{provider.identifier}.uid}'}" title="{f:translate(key:'manage_providers.deactivateLinkTitle', arguments: {0: providerLabel})}" class="btn btn-danger active" additionalAttributes="{role: 'button'}" aria="{pressed: ariaPressed}">
                 <f:translate key="manage_providers.deactivateLinkLabel" />
             </f:link.action>
         </f:then>
         <f:else>
-            <f:link.page additionalParams="{tx_oauth2client: {action: 'authorize'}, oauth2-provider: provider.identifier}" title="{f:translate(key:'manage_providers.activateLinkTitle', arguments: {0: providerLabel})}" class="btn btn-outline-primary" additionalAttributes="{role: 'button'}" aria="{pressed: 'true'}">
+            <f:link.page additionalParams="{tx_oauth2client: {action: 'authorize'}, oauth2-provider: provider.identifier}" title="{f:translate(key:'manage_providers.activateLinkTitle', arguments: {0: providerLabel})}" class="btn btn-success" additionalAttributes="{role: 'button'}" aria="{pressed: ariaPressed}">
                 <f:translate key="manage_providers.activateLinkLabel" />
             </f:link.page>
         </f:else>
